--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.login.RegisterActivity"
+            android:exported="false"></activity>
+        <activity
+            android:name=".QRscanner.MainActivity"
+            android:exported="true" >
+        </activity>
+
     </application>
 
 </manifest>
