--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name=".ui.login.RegisterActivity"
             android:exported="false"></activity>
         <activity
-            android:name=".QRscanner.MainActivity"
+            android:name=".qrscanner.MainActivity"
             android:exported="true" >
         </activity>
 
