--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,11 +53,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
         // Import the BoM for the Firebase platform
-        implementation platform('com.google.firebase:firebase-bom:31.1.0')
+    implementation platform('com.google.firebase:firebase-bom:31.1.0')
 
         // Add the dependency for the Firebase Authentication library
         // When using the BoM, you don't specify versions in Firebase library dependencies
-        implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.android.material:material:1.7.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
 
 }
