Added scanner, passing the data to another fragment and listing of items.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,25 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "pub.devrel:easypermissions:3.0.0"
+    implementation "com.journeyapps:zxing-android-embedded:4.1.0"
+    def nav_version = "2.5.3"
 
+    // Java language implementation
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+
+    // Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // Feature module Support
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+
+    // Testing Navigation
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
+    // Jetpack Compose Integration
+    implementation "androidx.navigation:navigation-compose:$nav_version"
 }
